# otgp

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml
.github/workflows/: backend.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 316a60e67311_initial_schema.py
backend/app/: __init__.py
backend/app/core/: __init__.py  config.py  db.py  permissions.py  tenancy.py
backend/app/models/: __init__.py  asset.py  audit.py  base.py  iam.py  project.py  tenancy.py
backend/tests/: conftest.py  test_permission_catalogue.py  test_permissions.py  test_tenant_isolation.py
deploy/postgres/init/: 00-extensions.sql  01-app-role.sh
docs/: ARCHITECTURE.md  original-brief.txt
