[project]
name = "otgp-backend"
version = "0.1.0"
description = "Open Telecom GIS Planner — backend"
# No `readme` key: setuptools refuses to read a file outside the project root, and the
# README lives at the repository root rather than inside backend/.
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0.36",
    "geoalchemy2>=0.15",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "redis>=5.2",
    "celery>=5.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = []
